force-app/main/default/objects/Plant__c/fields/Date_Acquired__c.field-meta.xml
<CustomField>
    <fullName>Date_Acquired__c</fullName>
    <description>The date you brought this plant home.</description>
    <label>Date Acquired</label>
    <type>Date</type>
</CustomField>