force-app/main/default/objects/Plant__c/fields/Last_Watered_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Watered_Date__c</fullName>
    <description>The date this plant was last watered. This will be updated by our app.</description>
    <label>Last Watered Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>