force-app/main/default/objects/Plant__c/fields/Next_Watering_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Watering_Date__c</fullName>
    <formula>Last_Watered_Date__c + Water_Frequency_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Watering Date</label>
    <type>Date</type>
</CustomField>