force-app/main/default/objects/Plant__c/fields/Plant_Picture_URL__c.field-meta.xml
<CustomField>
    <fullName>Plant_Picture_URL__c</fullName>
    <inlineHelpText>A public URL to an image of your plant. Simplifies image handling in LWC.</inlineHelpText>
    <label>Plant Picture URL</label>
    <type>Url</type>
</CustomField>