force-app/main/default/objects/Plant__c/fields/Species__c.field-meta.xml
<CustomField>
    <fullName>Species__c</fullName>
    <description>The scientific or common species name (e.g., &quot;Monstera Deliciosa&quot;).</description>
    <label>Species</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>