force-app/main/default/objects/Plant__c/fields/Sunlight_Needs__c.field-meta.xml
<CustomField>
    <fullName>Sunlight_Needs__c</fullName>
    <label>Sunlight Needs</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low Light</fullName>
            </value>
            <value>
                <fullName>Indirect Sunlight</fullName>
            </value>
            <value>
                <fullName>Direct Sunlight</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>