force-app/main/default/objects/Plant__c/fields/Water_Frequency_Days__c.field-meta.xml
<CustomField>
    <fullName>Water_Frequency_Days__c</fullName>
    <inlineHelpText>How many days should pass between waterings? (e.g., 7).</inlineHelpText>
    <label>Water Frequency (Days)</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>