force-app/main/default/objects/Plant__c/validationRules/Date_Acquired_Cannot_Be_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Acquired_Cannot_Be_Future</fullName>
    <active>true</active>
    <errorConditionFormula>Date_Acquired__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Date_Acquired__c</errorDisplayField>
    <errorMessage>The &apos;Date Acquired&apos; cannot be in the future.</errorMessage>
</ValidationRule>