force-app/main/default/objects/Plant__c/validationRules/Last_Watered_Date_Cannot_Be_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Last_Watered_Date_Cannot_Be_Future</fullName>
    <active>true</active>
    <errorConditionFormula>Last_Watered_Date__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Last_Watered_Date__c</errorDisplayField>
    <errorMessage>The &apos;Last Watered Date&apos; cannot be in the future.</errorMessage>
</ValidationRule>