force-app/main/default/objects/Plant__c/validationRules/Water_Frequency_Must_Be_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Water_Frequency_Must_Be_Positive</fullName>
    <active>true</active>
    <errorConditionFormula>Water_Frequency_Days__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Water_Frequency_Days__c</errorDisplayField>
    <errorMessage>The water frequency must be a positive number (e.g., 1 or greater).</errorMessage>
</ValidationRule>